# Topological-Quantum-Neural-Networks

./: .gitignore  CONTRIBUTING.md  README.md  generate_all_plots.py  pyproject.toml
.github/workflows/: ci.yml
Code/Cobordism Viewer/: README.md  cobordism_evolution_viewer.py
Code/Image Classification/: interactive_tqnn_classifier.py  interactive_tqnn_gui.py
Code/Interactive Quantum Tanner/: interactive_3d_tanner_graph.py  tanner_graph_examples.py
Code/Static Visualization/: animated_visualizations.py  static_visualizations.py  tqnn_helpers.py  tqnn_sandbox.py
tests/: conftest.py  test_imports.py  test_processor.py  test_tqnn_core.py  test_visualization.py
tqnn/: __init__.py  helpers.py  invariants.py  processor.py  theme.py
tqnn/classifier/: gui.py
tqnn/cobordism/: gui.py
tqnn/simulation/: gui.py
tqnn/visualization/: animated.py  sandbox.py  static.py
